test/error/ClassBaseUndefined.fu
public class Test :
	Base //ERROR: Base class 'Base' not found
{
	public static bool Run() => true;
}
